<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:layout_width="289dp"
        android:id="@+id/email_login"
        android:inputType="textWebEmailAddress"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_gravity="center"
        android:hint="@string/email"
        />

    <EditText
        android:layout_width="289dp"
        android:id="@+id/username_login"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:hint="@string/username"
        />

    <EditText
        android:layout_width="289dp"
        android:id="@+id/password_login"
        android:inputType="textWebPassword"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="289dp"
        android:id="@+id/cnfr_password_login"
        android:inputType="textWebPassword"
        android:hint="@string/confirm_password"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content" />

    <android.support.design.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        android:text="@string/login_button"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"/>

    

</LinearLayout>